Bug 404340 - offline update reboot page very bare-bones
Summary: offline update reboot page very bare-bones
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-14 12:57 UTC by Harald Sitter
Modified: 2019-04-16 00:18 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (41.91 KB, image/png)
2019-02-14 12:57 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2019-02-14 12:57:11 UTC
Created attachment 118069 [details]
screenshot

when doing offline updates the page that prompts to reboot is very bare bones and doesn't explain why one needs to reboot.
this works kind-of for now with offline behavior being opt-in, if/when that gets used as default the user will likely want more information than "the system requires a reboot"


STEPS TO REPRODUCE
1. do offline update
2. stare at reboot page that appears once updates are downloaded/staged

OBSERVED RESULT

pages tells me to reboot but doesn't say why


EXPECTED RESULT

page tells me why I need a reboot... "to apply the updates"


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 5.15
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2019-02-14 22:49:12 UTC
Also there's no reboot button there!
Comment 2 Aleix Pol 2019-04-16 00:18:10 UTC
Git commit b7ebd04e894565a824b5d1f3ef11d00ad6597817 by Aleix Pol.
Committed on 16/04/2019 at 00:14.
Pushed by apol into branch 'master'.

Improve the updates page

Improves the message and adds a reboot button.

M  +8    -0    discover/DiscoverObject.cpp
M  +2    -0    discover/DiscoverObject.h
M  +7    -1    discover/qml/UpdatesPage.qml

https://commits.kde.org/discover/b7ebd04e894565a824b5d1f3ef11d00ad6597817