Improve the updates page

Improves the message and adds a reboot button.

BUG: 404340